<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_height="match_parent"
    android:orientation="horizontal"
    tools:showIn="@layout/fragment_matrix"
    >

    <FrameLayout style="@style/matrix_component" android:id="@+id/controls_comp_1">
        <TextView style="@style/matrix_component_label"
                  android:id="@+id/controls_comp_rR"
                  android:text="@string/cf_matrix_rR" />
    </FrameLayout>

    <include layout="@layout/inc_times" />

    <FrameLayout style="@style/matrix_component" android:id="@+id/controls_comp_2">
        <TextView style="@style/matrix_component_label"
                  android:id="@+id/controls_comp_rG"
                  android:text="@string/cf_matrix_rG" />
    </FrameLayout>

    <include layout="@layout/inc_times" />

    <FrameLayout style="@style/matrix_component" android:id="@+id/controls_comp_3">
        <TextView style="@style/matrix_component_label"
                  android:id="@+id/controls_comp_rB"
                  android:text="@string/cf_matrix_rB" />
    </FrameLayout>

    <include layout="@layout/inc_times" />

    <FrameLayout style="@style/matrix_component" android:id="@+id/controls_comp_4">
        <TextView style="@style/matrix_component_label"
                  android:id="@+id/controls_comp_S"
                  android:text="@string/cf_matrix_S" />
    </FrameLayout>

    <include layout="@layout/inc_times" />

    <FrameLayout style="@style/matrix_component" android:id="@+id/controls_comp_5">
        <TextView style="@style/matrix_component_label"
                  android:id="@+id/controls_comp_sat"
                  android:text="@string/cf_matrix_sat" />
    </FrameLayout>

</LinearLayout>
